# embassy_gps

./: Cargo.toml  README.md
src/: lib.rs  types.rs
src/gps/: gps_interfases.rs  mod.rs
src/gps/l76k/: driver.rs  mod.rs
src/gps/l76k/esp32c3/: fsm_esp32c3.rs  gps_types_esp32c3.rs  mod.rs
src/gps/l76k/nrf/: fsm_nrf.rs  gps_types_nrf.rs  mod.rs
src/gps/l76k/pcas/: mod.rs  models.rs  request.rs
